0.003
	- Makefile.PL was checking /usr/X11R6 for headers instead of 
	  /usr/X11R6/include
	- add header directories as -I flags if we find a header in
	  them
	- avoid duplicate -L flags

0.002 2 Jan 2007
	Just packaging changes:
	- README was missing
	- updated my EU::MM and I now set the LICENSE key so it's set
	  in META.yml

0.001 1 Jan 2007
	- Initial release with X11 and Win32 support